<resources>
    <string name="app_name">Baking App</string>

    <string name="sorry_error_happen">Sorry some error happen ! Please try again later</string>
    <string name="no_internet_connection_layout">No Internet Connection Layout</string>
    <string name="no_internet_message">Check your internet connection and try again</string>
    <string name="btn_try_again">TRY AGAIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipe_name">Nuttela Pie</string>
    <string name="recipe_serving">(Serving :</string>
    <string name="recipe_serving_number">4</string>
    <string name="recipe_ingredients_title">Ingredients</string>
    <string name="recipe_steps_title">Steps</string>
    <string name="previous_btn">Prev</string>
    <string name="next_btn">Next</string>
    <string name="recipe_ingredient_quantity">1</string>
    <string name="recipe_ingredient_measure">K</string>
    <string name="recipe_ingredient">Nutella or other chocolate spread</string>
    <string name="recipe_step_number">1</string>
    <string name="recipe_step">Press the crust into baking form.</string>
    <string name="no_recipe_available_title">No Recipe Available Yet ~</string>
    <string name="fab_not_implemented">Not implemented Yet ~</string>
    <string name="recipe_image_transition_name">Recipe Image Transition</string>

    <string name="heart_full_path">M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5 2,5.42 4.42,3 7.5,3c1.74,0 3.41,0.81 4.5,2.09C13.09,3.81 14.76,3 16.5,3 19.58,3 22,5.42 22,8.5c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z</string>
    <string name="heart_clip_hidden">M18 37 L38 37 L38 37 L18 37 Z</string>
    <string name="heart_clip_shown">M0 0 L56 0 L56 56 L0 56 Z</string>
    <string name="heart_empty_path">M16.5,3c-1.74,0 -3.41,0.81 -4.5,2.09C10.91,3.81 9.24,3 7.5,3 4.42,3 2,5.42 2,8.5c0,3.78 3.4,6.86 8.55,11.54L12,21.35l1.45,-1.32C18.6,15.36 22,12.28 22,8.5 22,5.42 19.58,3 16.5,3zM12.1,18.55l-0.1,0.1 -0.1,-0.1C7.14,14.24 4,11.39 4,8.5 4,6.5 5.5,5 7.5,5c1.54,0 3.04,0.99 3.57,2.36h1.87C13.46,5.99 14.96,5 16.5,5c2,0 3.5,1.5 3.5,3.5 0,2.89 -3.14,5.74 -7.9,10.05z</string>

</resources>
