<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:id="@+id/recipe_name_text_view"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/no_ingredients_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:text="@string/no_recipe_available_title"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold|italic"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/recipe_ingredients_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/colorSecondaryText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/recipe_ingredient"
        />



</LinearLayout>