<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:showIn="@layout/activity_recipe_detail"
    android:id="@+id/recipe_detail_layout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_name_text_view"
                android:textColor="@color/colorAccent"
                android:text="@string/recipe_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_marginBottom="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/recipe_serving"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/recipe_servings_text_view"
                android:textColor="@color/colorSecondaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/recipe_serving_number"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text=")"
                android:gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_title"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_ingredients_fragment"
                    android:layout_marginTop="16dp"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/colorWhite"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_steps_title"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_steps_fragment"
                    android:layout_marginTop="16dp"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>




</android.support.v4.widget.NestedScrollView>